--- a/eQueue/eQueue-war/web/resources/css/sidebar.css
+++ b/eQueue/eQueue-war/web/resources/css/sidebar.css
@@ -43,3 +43,45 @@
     flex-direction: column;
     justify-content: center;
 }
+
+/*Custom Icons*/
+.custom-icon {
+    width: 14px; 
+    height: 14px;
+    align: up;
+}
+
+.store-icon {
+    background-image: url("#{resource['images/icons/store_icon.svg']}") !important;
+}
+
+.queue-icon {
+    background-image: url("#{resource['images/icons/queue_icon.svg']}") !important;
+}
+
+.menu-icon {
+    background-image: url("#{resource['images/icons/menu_icon.svg']}") !important;
+}
+
+.table-icon {
+    background-image: url("#{resource['images/icons/table_icon.svg']}") !important;
+}
+
+.kitchen-icon {
+    background-image: url("#{resource['images/icons/kitchen_icon.svg']}") !important;
+}
+
+.transaction-icon {
+    background-image: url("#{resource['images/icons/transaction_icon.svg']}") !important;
+}
+
+.employees-icon {
+    background-image: url("#{resource['images/icons/employees_icon.svg']}") !important;
+}
+
+.home-icon {
+    background-image: url("#{resource['images/icons/home_icon.svg']}") !important;
+}
+
+
+
