Completed view employee and employee details, partially done with create employee

--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -19,7 +19,7 @@
                         <p:menuitem value="Kitchen Management" icon="custom-icon kitchen-icon" />
                     </p:submenu>
                     <p:submenu label="Employee">
-                        <p:menuitem value="Employee Management" icon="custom-icon employees-icon" />
+                        <p:menuitem value="Employee Management" outcome="/employeeManagement.xhtml" icon="custom-icon employees-icon" />
                     </p:submenu>
                     <p:submenu label="Sales">
                         <p:menuitem value="Transaction History" icon="custom-icon transaction-icon" />
