--- a/eQueue/eQueue-war/web/resources/css/sidebar.css
+++ b/eQueue/eQueue-war/web/resources/css/sidebar.css
@@ -24,6 +24,8 @@
 }
 
 .profile-picture-container {
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
