completed employee profile page

--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -2,10 +2,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:outputStylesheet library="css" name="sidebar.css" />
 
-    <p:sidebar widgetVar="sidebar1" baseZIndex="10000">
+    <p:sidebar id="sidebar1" widgetVar="sidebar1" baseZIndex="10000">
         <div class="menu-container" style="">
             <h1 class="menu-header">Menu</h1>
             <h:form id="menuForm">   
@@ -28,7 +29,29 @@
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
+
             <div class="menu-user-container-outer">
+
+                <p:commandLink actionListener="#{employeeProfilePageManagedBean.navigate}">
+                    <!--<f:attribute name="currentEmployee" value="{sessionScope.currentEmployee}" />-->
+                    <div class="menu-user-container-inner">
+                        <div class="profile-picture-container" >
+                            <p:graphicImage class="profile-picture" rendered="#{sessionScope.currentEmployee.imagePath != null}" library="images" 
+                                            name="profiles/#{sessionScope.currentEmployee.imagePath}" height="75" width="75" 
+                                            alt="#{sessionScope.currentEmployee.lastName} #{sessionScope.currentEmployee.firstName}'s Profile Picture" 
+                                            />
+                            <p:graphicImage class="profile-picture" rendered="#{sessionScope.currentEmployee.imagePath == null}" library="images" 
+                                            name="default-user-profile-picture.png" height="75" width="75" alt="User Profile Picture"
+                                            />
+                        </div>
+                        <div class="profile-container-text">
+                            <h:outputText style="font-size: 16px; font-weight: bold;" value="#{sessionScope.currentEmployee.lastName} #{sessionScope.currentEmployee.firstName}" />
+                            <h:outputText style="font-size: 14px;" value="#{sessionScope.currentEmployee.employeeRole}" />
+                        </div>
+                    </div>
+                </p:commandLink>
+
+                <!--
                 <div class="menu-user-container-inner">
                     <div class="profile-picture-container" >
                         <p:graphicImage class="profile-picture" rendered="#{sessionScope.currentEmployee.imagePath != null}" library="images" 
@@ -47,6 +70,7 @@
                         </p:commandLink>
                     </div>
                 </div>
+                -->
             </div>
         </div>
     </p:sidebar>
