--- a/eQueue/eQueue-war/web/resources/css/sidebar.css
+++ b/eQueue/eQueue-war/web/resources/css/sidebar.css
@@ -24,13 +24,12 @@
 }
 
 .profile-picture-container {
-    width: 60px;
-    height: 60px;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-.profile-picture-container:hover {
+.menu-user-container-inner:hover > .profile-picture-container{
     transform: scale(1.1);
     box-shadow: 0px 0px 19px 2px rgba(137,126,199,0.75);
 }
