Fixed image upload rendering and assigned image with employee id

--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -32,7 +32,7 @@
 
             <div class="menu-user-container-outer">
 
-                <p:commandLink actionListener="#{employeeProfilePageManagedBean.navigate}">
+                <p:commandLink action="/employeeProfilePage.xhtml?faces-redirect=true" >
                     <!--<f:attribute name="currentEmployee" value="{sessionScope.currentEmployee}" />-->
                     <div class="menu-user-container-inner">
                         <div class="profile-picture-container" >
