--- a/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
+++ b/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
@@ -16,41 +16,25 @@
 
         <p:layout fullPage="true">
 
-            <p:layoutUnit position="north" resizable="false" size="80">
-
-                <h1><p:commandLink oncomplete="PF('sidebar1').show()">eQueue Management System</p:commandLink></h1>
-
+            <p:layoutUnit position="north" resizable="false" size="80" style = "text-align:center;">
+                <div style="float: left; display: flex; height: 100%; margin-left: 20px">
+                    <p:commandLink class="nav-burger" oncomplete="PF('sidebar1').show()">
+                        <i class="fa fa-navicon nav-burger-icon" style="font-size: 25px"/>
+                    </p:commandLink>
+                </div>
+                <div style="float: right; display: flex; height: 100%; margin-right: 20px">
+                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}">
+                        <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px"/>
+                    </p:commandLink>
+                </div>
+                <h1>eQueue Management System</h1>
             </p:layoutUnit>
-
-            <!--            <p:layoutUnit size="240" position="west">
-                            
-                            <ui:insert name="mainmenu">
-                                <ui:include src="/mainmenu.xhtml" />
-                            </ui:insert>        
-                            
-                        </p:layoutUnit>-->
 
             <p:layoutUnit position="center" >
 
                 <ui:insert name="content">Content</ui:insert>
 
             </p:layoutUnit>
-
-            <!--            <p:layoutUnit minSize="200" position="east" header="Advertisements" collapsible="true" collapsed="true">
-                            
-                            <ui:insert name="sidebar">
-                                <ui:include src="/sidebar.xhtml" />
-                            </ui:insert>        
-                            
-                        </p:layoutUnit>-->
-
-            <!--            <p:layoutUnit position="south" size="70" >
-            
-                            <ui:insert name="footer">
-                                <ui:include src="/footer.xhtml" />
-                            </ui:insert>
-            
-                        </p:layoutUnit>                -->
 
         </p:layout>
     </h:body>
