--- a/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
+++ b/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
@@ -27,7 +27,7 @@
                         <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px"/>
                     </p:commandLink>
                 </div>
-                <h1>eQueue Management System</h1>
+                <p:link outcome="homepage"><h1>eQueue Management System</h1></p:link>
             </p:layoutUnit>
 
             <p:layoutUnit position="center" >
