--- a/eQueue/eQueue-war/web/resources/css/default.css
+++ b/eQueue/eQueue-war/web/resources/css/default.css
@@ -67,6 +67,37 @@ div.ui-growl {
     transform: scale(1.1);
 }
 
+.store-icon {
+    background-image: url("#{resource['images/icons/store_icon.svg']}") !important;
+}
+
+.queue-icon {
+    background-image: url("#{resource['images/icons/queue_icon.svg']}") !important;
+}
+
+.menu-icon {
+    background-image: url("#{resource['images/icons/menu_icon.svg']}") !important;
+}
+
+.table-icon {
+    background-image: url("#{resource['images/icons/table_icon.svg']}") !important;
+}
+
+.kitchen-icon {
+    background-image: url("#{resource['images/icons/kitchen_icon.svg']}") !important;
+}
+
+.transaction-icon {
+    background-image: url("#{resource['images/icons/transaction_icon.svg']}") !important;
+}
+
+.employees-icon {
+    background-image: url("#{resource['images/icons/employees_icon.svg']}") !important;
+}
+
+.home-icon {
+    background-image: url("#{resource['images/icons/home_icon.svg']}") !important;
+}
 /*
 Remove this as it messes up the components
 * {
