--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -16,7 +16,7 @@
                         <p:menuitem value="Queue Management" icon="custom-icon queue-icon" />
                         <p:menuitem value="Menu Management" outcome="/menuManagement.xhtml" icon="custom-icon menu-icon" />
                         <p:menuitem value="Table Management" outcome="/diningTableManagement.xhtml" icon="custom-icon table-icon" />
-                        <p:menuitem value="Kitchen Management" icon="custom-icon kitchen-icon" />
+                        <p:menuitem value="Kitchen Management" outcome="/kitchenManagement.xhtml" icon="custom-icon kitchen-icon" />
                     </p:submenu>
                     <p:submenu label="Employee">
                         <p:menuitem value="Employee Management" outcome="/employeeManagement.xhtml" icon="custom-icon employees-icon" />
