--- a/eQueue/eQueue-war/web/resources/css/homepage.css
+++ b/eQueue/eQueue-war/web/resources/css/homepage.css
@@ -1,9 +1,13 @@
 .outer-container {
     display: flex;
-    height: 100%;
     justify-content: space-around;
-    align-content: center;
+    align-content: space-around;
     padding: 10px;
+}
+
+.panel-grid-container {
+    text-align: center;
+    align-items: center;
 }
 
 .custom-icon-homepage {
@@ -14,7 +18,6 @@
 }
 
 .link-panel-container {
-    margin-bottom:20px;
     width: 85px;
     height: 85px;
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
@@ -26,6 +29,7 @@
 }
 
 .link-text-styling {
+    text-align: start;
     font-family: Georgia, serif;
     font-size: 14px;
     letter-spacing: 1px;
