--- a/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
+++ b/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
@@ -24,9 +24,8 @@
                     
                     <p:link class="header-text" outcome="homepage" value="eQueue Management System" style="font-size: 25px"/>
                     
-                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="margin-right: 20px; text-align: center">
-                        <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px"/>
-                        <p style="margin: 0px">sign out</p>
+                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="margin-right: 20px; text-align: center; vertical-align: central;">
+                        <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px" title="Sign Out"/>
                     </p:commandLink>
                 </div>
             </p:layoutUnit>
