refactored kitchen management (table headers, view specific order items, 'prepare/serve' button for items that are ordered/preparing, added 'complete' button when all items are served/cancelled)

--- a/eQueue/eQueue-war/web/resources/css/default.css
+++ b/eQueue/eQueue-war/web/resources/css/default.css
@@ -107,6 +107,10 @@ div.ui-growl {
     background-image: url("#{resource['images/icons/serve_icon.svg']}") !important;
 }
 
+.alert-icon {
+    background-image: url("#{resource['images/icons/alert_icon.svg']}") !important;
+}
+
 .header-text:hover {
     text-decoration: none;
 }
