--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -13,7 +13,7 @@
             <h:form id="menuForm">   
                 <p:panelMenu class="menu-panel">
                     <p:submenu label="Store">
-                        <p:menuitem value="Store Details" outcome="/viewStore.xhtml" icon="custom-icon store-icon" />
+                        <p:menuitem value="Store Details" outcome="/storeDetails.xhtml" icon="custom-icon store-icon" />
                         <p:menuitem value="Queue Management" icon="custom-icon queue-icon" />
                         <p:menuitem value="Menu Management" outcome="/menuManagement.xhtml" icon="custom-icon menu-icon" />
                         <p:menuitem value="Table Management" outcome="/diningTableManagement.xhtml" icon="custom-icon table-icon" />
