--- a/eQueue/eQueue-war/web/resources/css/homepage.css
+++ b/eQueue/eQueue-war/web/resources/css/homepage.css
@@ -1,13 +1,10 @@
 .outer-container {
     display: flex;
     justify-content: space-around;
-    align-content: space-around;
-    padding: 10px;
-}
-
-.panel-grid-container {
-    text-align: center;
+    align-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    padding: 10px;
 }
 
 .custom-icon-homepage {
@@ -18,9 +15,19 @@
 }
 
 .link-panel-container {
-    width: 85px;
-    height: 85px;
+    width: 120px;
+    height: 120px;
+    margin: 20px;
+    position:relative;
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
+.vertically-centered {
+    position: absolute;
+    height: 120px;
+    top: 0;
+    bottom: 0;
+    margin:auto;
 }
 
 .link-panel-container:hover {
