--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -14,7 +14,7 @@
                 <p:panelMenu class="menu-panel">
                     <p:submenu label="Store">
                         <p:menuitem value="Store Details" outcome="/storeDetails.xhtml" icon="custom-icon store-icon" />
-                        <p:menuitem value="Queue Management" icon="custom-icon queue-icon" />
+                        <p:menuitem value="Queue Management" outcome="/queueManagement.xhtml" icon="custom-icon queue-icon" />
                         <p:menuitem value="Menu Management" outcome="/menuManagement.xhtml" icon="custom-icon menu-icon" />
                         <p:menuitem value="Table Management" outcome="/diningTableManagement.xhtml" icon="custom-icon table-icon" />
                         <p:menuitem value="Kitchen Management" outcome="/kitchenManagement.xhtml" icon="custom-icon kitchen-icon" />
