add functionality to receive alerts sent by mobile app, created new entity alert, with supporting managedbean, view, rws

--- a/eQueue/eQueue-war/web/resources/css/default.css
+++ b/eQueue/eQueue-war/web/resources/css/default.css
@@ -67,6 +67,14 @@ div.ui-growl {
     transform: scale(1.1);
 }
 
+.bell {
+    align-self: center
+}
+
+.bell:hover{
+    transform: scale(1.1);
+}
+
 .store-icon {
     background-image: url("#{resource['images/icons/store_icon.svg']}") !important;
 }
