--- a/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
+++ b/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>eQueue Management System</title>
         <h:outputStylesheet library="css" name="default.css" />
@@ -18,15 +19,24 @@
 
             <p:layoutUnit position="north" resizable="false" size="80">
                 <div style = "display: flex; align-content: center; align-items: center; justify-content: space-between; height: 100%;">
+                    
                     <p:commandLink class="nav-burger" oncomplete="PF('sidebar1').show()" style="margin-left: 20px">
                         <i class="fa fa-navicon nav-burger-icon" style="font-size: 25px"/>
                     </p:commandLink>
-                    
+
                     <p:link class="header-text" outcome="homepage" value="eQueue Management System" style="font-size: 25px"/>
-                    
-                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="margin-right: 20px; text-align: center; vertical-align: central;">
+
+                    <div style="margin-right: 20px">
+                    <p:commandLink id="alertBtn" class="bell" style=" text-align: center; vertical-align: central;">
+                        <i class="fa fa-bell" style="font-size: 25px" title="Notifications"/>
+                        <p:outputLabel style="font-size: 25px" id="alertCount" value=" #{alertManagedBean.alerts.size()}" />
+                    </p:commandLink>
+                        &nbsp;
+                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="text-align: center; vertical-align: central;" >
                         <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px" title="Sign Out"/>
                     </p:commandLink>
+                    </div>
+                    
                 </div>
             </p:layoutUnit>
 
@@ -37,6 +47,35 @@
             </p:layoutUnit>
 
         </p:layout>
+
+        <p:overlayPanel id="alertPanel" for="alertBtn" dynamic="true" style="width:600px" modal="false" dismissable="true">
+            
+            <p:dataTable id="alertDataTable" var="alert" value="#{alertManagedBean.alerts}" rows="5" paginator="true">
+                
+                <p:column headerText="Table ID">
+                    <h:outputText value="#{alert.tableId}" />
+                </p:column>
+
+                <p:column headerText="Time">
+                    <h:outputText value="#{alert.alertDate}" />
+                </p:column>
+
+                <p:column headerText="Message">
+                    <h:outputText value="#{alert.message}" />
+                </p:column>
+
+                <p:column headerText="Action">
+                    <p:commandButton icon="ui-icon-trash" actionListener="#{alertManagedBean.deleteAlert}" update="alertDataTable alertCount">
+                        <f:attribute name="alertToDelete" value="#{alert}" />
+                    </p:commandButton>
+                </p:column> 
+                
+            </p:dataTable>
+            
+        </p:overlayPanel>
+        
+        <p:poll interval="3" listener="#{alertManagedBean.postConstruct}" update="alertDataTable alertCount" />
+        
     </h:body>
 </html>
 
