--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -25,6 +25,9 @@
                     <p:submenu label="Sales">
                         <p:menuitem value="Transaction History" icon="custom-icon transaction-icon" />
                     </p:submenu>
+                    <p:submenu label="Analytics">
+                        <p:menuitem value="Analytics" outcome="/analyticsPage.xhtml" icon="custom-icon analytics-icon" />
+                    </p:submenu>
                     <p:submenu label="Navigations" >
                         <p:menuitem value="Home" outcome="/homepage" icon="custom-icon home-icon"/>
                     </p:submenu>
