--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -23,7 +23,7 @@
                         <p:menuitem value="Employee Management" outcome="/employeeManagement.xhtml" icon="custom-icon employees-icon" />
                     </p:submenu>
                     <p:submenu label="Sales">
-                        <p:menuitem value="Transaction History" icon="custom-icon transaction-icon" />
+                        <p:menuitem value="Transaction Management" outcome="/transactionManagement.xhtml" icon="custom-icon transaction-icon" />
                     </p:submenu>
                     <p:submenu label="Analytics">
                         <p:menuitem value="Analytics" outcome="/analyticsPage.xhtml" icon="custom-icon analytics-icon" />
