--- a/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
+++ b/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
@@ -19,7 +19,7 @@
 
             <p:layoutUnit position="north" resizable="false" size="80">
                 <div style = "display: flex; align-content: center; align-items: center; justify-content: space-between; height: 100%;">
-                    
+
                     <p:commandLink class="nav-burger" oncomplete="PF('sidebar1').show()" style="margin-left: 20px">
                         <i class="fa fa-navicon nav-burger-icon" style="font-size: 25px"/>
                     </p:commandLink>
@@ -27,16 +27,16 @@
                     <p:link class="header-text" outcome="homepage" value="eQueue Management System" style="font-size: 25px"/>
 
                     <div style="margin-right: 20px">
-                    <p:commandLink id="alertBtn" class="bell" style=" text-align: center; vertical-align: central;">
-                        <i class="fa fa-bell" style="font-size: 25px" title="Notifications"/>
-                        <p:outputLabel style="font-size: 25px" id="alertCount" value=" #{alertManagedBean.alerts.size()}" />
-                    </p:commandLink>
+                        <p:commandLink id="alertBtn" class="bell" style=" text-align: center; vertical-align: central; margin-right: 10px;">
+                            <i class="fa fa-bell" style="font-size: 25px" title="Notifications"/>
+                            <p:outputLabel style="font-size: 25px" id="alertCount" value=" #{alertManagedBean.alerts.size()}" />
+                        </p:commandLink>
                         &nbsp;
-                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="text-align: center; vertical-align: central;" >
-                        <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px" title="Sign Out"/>
-                    </p:commandLink>
+                        <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="text-align: center; vertical-align: central;" >
+                            <i class="fa fa-sign-out nav-logout-icon" style="font-size: 28px" title="Sign Out"/>
+                        </p:commandLink>
                     </div>
-                    
+
                 </div>
             </p:layoutUnit>
 
@@ -49,33 +49,35 @@
         </p:layout>
 
         <p:overlayPanel id="alertPanel" for="alertBtn" dynamic="true" style="width:600px" modal="false" dismissable="true">
-            
+
             <p:dataTable id="alertDataTable" var="alert" value="#{alertManagedBean.alerts}" rows="5" paginator="true">
-                
-                <p:column headerText="Table ID">
+
+                <p:column headerText="Table ID" style="width: 80px; text-align: center" >
                     <h:outputText value="#{alert.tableId}" />
                 </p:column>
 
-                <p:column headerText="Time">
-                    <h:outputText value="#{alert.alertDate}" />
+                <p:column headerText="Time" style="width: 150px">
+                    <h:outputText value="#{alert.alertDate}">
+                        <f:convertDateTime pattern="dd-MMMM-yyyy hh:mm a" />
+                    </h:outputText>
                 </p:column>
 
                 <p:column headerText="Message">
                     <h:outputText value="#{alert.message}" />
                 </p:column>
 
-                <p:column headerText="Action">
-                    <p:commandButton icon="ui-icon-trash" actionListener="#{alertManagedBean.deleteAlert}" update="alertDataTable alertCount">
+                <p:column headerText="Delete Alert"  style="text-align: center">
+                    <p:commandButton icon="fa fa-fw fa-trash" actionListener="#{alertManagedBean.deleteAlert}" update="alertDataTable alertCount">
                         <f:attribute name="alertToDelete" value="#{alert}" />
                     </p:commandButton>
                 </p:column> 
-                
+
             </p:dataTable>
-            
+
         </p:overlayPanel>
-        
+
         <p:poll interval="3" listener="#{alertManagedBean.postConstruct}" update="alertDataTable alertCount" />
-        
+
     </h:body>
 </html>
 
