--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -30,6 +30,7 @@
                     </p:submenu>
                     <p:submenu label="Navigations" >
                         <p:menuitem value="Home" outcome="/homepage" icon="custom-icon home-icon"/>
+                        <p:menuitem value="Logout" icon="custom-icon logout-icon" actionListener="#{employeeLoginManagedBean.logout}" />
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
