--- a/eQueue/eQueue-war/web/resources/css/homepage.css
+++ b/eQueue/eQueue-war/web/resources/css/homepage.css
@@ -1,23 +1,37 @@
+.ui-panel .ui-panel-content {
+    border: none !important;
+
+}
+
 .outer-container {
     display: flex;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
+    justify-content: center;
     align-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 10px;
+    /*padding: 10px;*/
+    padding: 20px;
 }
 
 .custom-icon-homepage {
-    width: 25px; 
-    height: 25px;
+    /*width: 25px;*/ 
+    width: 35px; 
+    /*height: 25px;*/
+    height: 35px;
     display: block;
+    /*margin-top: 0px;*/
+    margin-top: 35px;
     margin-bottom: 10px;
 }
 
 .link-panel-container {
-    width: 120px;
-    height: 120px;
-    margin: 20px;
+    /*width: 120px;*/
+    width: 150px;
+    /*height: 120px;*/
+    height: 150px;
+    /*margin: 20px;*/
+    margin: 10px 40px 10px 40px;
     position:relative;
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
@@ -42,7 +56,8 @@
 .link-text-styling {
     text-align: start;
     font-family: Georgia, serif;
-    font-size: 14px;
+    /*font-size: 14px;*/
+    font-size: 16px;
     letter-spacing: 1px;
     color: #565656;
     font-weight: 400;
