modified small bugs on favicon

--- a/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
+++ b/eQueue/eQueue-war/web/template/defaultTemplate.xhtml
@@ -7,6 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>eQueue Management System</title>
+        <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicon.ico']}" />
         <h:outputStylesheet library="css" name="default.css" />
     </h:head>
     <h:body>
@@ -19,7 +20,7 @@
 
             <p:layoutUnit position="north" resizable="false" size="80">
                 <div style = "display: flex; align-content: center; align-items: center; justify-content: space-between; height: 100%;">
-                    
+
                     <p:commandLink class="nav-burger" oncomplete="PF('sidebar1').show()" style="margin-left: 20px">
                         <i class="fa fa-navicon nav-burger-icon" style="font-size: 25px"/>
                     </p:commandLink>
@@ -27,16 +28,16 @@
                     <p:link class="header-text" outcome="homepage" value="eQueue Management System" style="font-size: 25px"/>
 
                     <div style="margin-right: 20px">
-                    <p:commandLink id="alertBtn" class="bell" style=" text-align: center; vertical-align: central;">
-                        <i class="fa fa-bell" style="font-size: 25px" title="Notifications"/>
-                        <p:outputLabel style="font-size: 25px" id="alertCount" value=" #{alertManagedBean.alerts.size()}" />
-                    </p:commandLink>
+                        <p:commandLink id="alertBtn" class="bell" style=" text-align: center; vertical-align: central;">
+                            <i class="fa fa-bell" style="font-size: 25px" title="Notifications"/>
+                            <p:outputLabel style="font-size: 25px" id="alertCount" value=" #{alertManagedBean.alerts.size()}" />
+                        </p:commandLink>
                         &nbsp;
-                    <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="text-align: center; vertical-align: central;" >
-                        <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px" title="Sign Out"/>
-                    </p:commandLink>
+                        <p:commandLink class="nav-logout" actionListener="#{employeeLoginManagedBean.logout}" style="text-align: center; vertical-align: central;" >
+                            <i class="fa fa-sign-out nav-logout-icon" style="font-size: 25px" title="Sign Out"/>
+                        </p:commandLink>
                     </div>
-                    
+
                 </div>
             </p:layoutUnit>
 
@@ -49,9 +50,9 @@
         </p:layout>
 
         <p:overlayPanel id="alertPanel" for="alertBtn" dynamic="true" style="width:600px" modal="false" dismissable="true">
-            
+
             <p:dataTable id="alertDataTable" var="alert" value="#{alertManagedBean.alerts}" rows="5" paginator="true">
-                
+
                 <p:column headerText="Table ID">
                     <h:outputText value="#{alert.tableId}" />
                 </p:column>
@@ -69,13 +70,13 @@
                         <f:attribute name="alertToDelete" value="#{alert}" />
                     </p:commandButton>
                 </p:column> 
-                
+
             </p:dataTable>
-            
+
         </p:overlayPanel>
-        
+
         <p:poll interval="3" listener="#{alertManagedBean.postConstruct}" update="alertDataTable alertCount" />
-        
+
     </h:body>
 </html>
 
