--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -26,7 +26,7 @@
                         <p:menuitem value="Transaction Management" outcome="/transactionManagement.xhtml" icon="custom-icon transaction-icon" />
                     </p:submenu>
                     <p:submenu label="Analytics">
-                        <p:menuitem value="Data Analytics" outcome="/analyticsPage.xhtml" icon="custom-icon analytics-icon" />
+                        <p:menuitem value="Business Analytics" outcome="/analyticsPage.xhtml" icon="custom-icon analytics-icon" />
                     </p:submenu>
                     <p:submenu label="Navigations" >
                         <p:menuitem value="Home" outcome="/homepage" icon="custom-icon home-icon"/>
