--- a/eQueue/eQueue-war/web/template/sidebar.xhtml
+++ b/eQueue/eQueue-war/web/template/sidebar.xhtml
@@ -48,7 +48,7 @@
                                             />
                         </div>
                         <div class="profile-container-text">
-                            <h:outputText style="font-size: 16px; font-weight: bold;" value="#{sessionScope.currentEmployee.lastName} #{sessionScope.currentEmployee.firstName}" />
+                            <h:outputText style="font-size: 16px; font-weight: bold;" value="#{sessionScope.currentEmployee.firstName} #{sessionScope.currentEmployee.lastName}" />
                             <h:outputText style="font-size: 14px;" value="#{sessionScope.currentEmployee.employeeRole}" />
                         </div>
                     </div>
